# forLab

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/5dquestions/: questions.c  questions.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/test/: CMakeLists.txt
libs/test/testMatrix/: testMatrix.c  testMatrix.h
string/: string_.c  string_.h
string/tasks/: ReverseWords.h  addToTheStringWithLessWord.h  areTheSameWordsInString.h  countPallendrom.h  deleteEqualLastWord.h  deleteRepeatingCharinWord.h  deleteSequenceInWord.h  deleteWordPallendrom.h  digitSpace.h  digitToEndReversSymbolToStartString.h  digitToStart.h  digitToStartNonReversString.h  digitToStartSymbolEnd.h  getLastWordFromFirstToSecond.h  getStringMerging.h  getWordBeforeFirstMatch.h  getWordBeforeFirstWordWithA.h  isOrderWord.h  isWordLettersSubsetStr.h  removeAdjacentEqualLetters.h  removeExtraSpaces.h  removeNonLetters.h  replace.h  reverseWordInString.h  reverseWordOrder.h  wordsOfEqualLetters.h
